[package]
name = "pyo3-log"
version = "0.1.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "Logging bridge from pyo3 native extension to python"
documentation = "https://docs.rs/pyo3-log"
repository = "https://github.com/vorner/pyo3-log"
readme = "README.md"
keywords = ["pyo3", "python", "logging"]
categories = ["development-tools::debugging"]
edition = "2018"
license = "Apache-2.0/MIT"

[badges]
travis-ci = { repository = "vorner/pyo3-log" }
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "~0.4"
# It's OK to ask for std on log, because pyo3 needs it too.
log = { version = "~0.4", default-features = false, features = ["std"] }
pyo3 = { version = "~0.11", default-features = false, features = ["macros"] }

[dev-dependencies]
version-sync = "~0.9"
