[package]
name = "pyo3-log"
version = "0.8.4"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "Logging bridge from pyo3 native extension to python"
documentation = "https://docs.rs/pyo3-log"
repository = "https://github.com/vorner/pyo3-log"
readme = "README.md"
keywords = ["pyo3", "python", "logging"]
categories = ["development-tools::debugging"]
edition = "2018"
license = "Apache-2.0 OR MIT"
rust-version = "1.48.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "~1"
# It's OK to ask for std on log, because pyo3 needs it too.
log = { version = "~0.4.4", default-features = false, features = ["std"] }
pyo3 = { version = ">=0.14, <0.21", default-features = false }

[dev-dependencies]
pyo3 = { version = ">=0.14, <0.21", default-features = false, features = ["auto-initialize", "macros"] }

# `pyo3-macros` is lying about the minimal version for its `syn` dependency.
# Because we're testing with `-Zminimal-versions`, we need to explicitly set it here.
syn = "~1.0.13"
