[package]
name = "hello_world"
version = "0.1.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hello_world"
crate-type = ["cdylib"]

[dependencies]
log = "~0.4"
pyo3 = { version = "~0.11", features = ["extension-module"] }
pyo3-log = { path = "../.." }
